Stable state: Login and basic auth working

--- a/backend/IstasyonDemo.Api/appsettings.json
+++ b/backend/IstasyonDemo.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=istasyon_db;Username=admin;Password=password123;Timeout=30;Command Timeout=60;Pooling=true;MinPoolSize=5;MaxPoolSize=100;Include Error Detail=true"
+  },
+  "JwtSettings": {
+    "SecretKey": "super_secret_key_change_this_in_production_12345_make_it_longer_for_security"
   }
 }
