--- a/backend/IstasyonDemo.Api/appsettings.json
+++ b/backend/IstasyonDemo.Api/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "SeqServerUrl": "http://localhost:5341"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
