seq yapısı değiştirildi

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
     image: datalust/seq:latest
     environment:
       - ACCEPT_EULA=Y
-      - SEQ_API_LISTENURIS=http://+:5341
+      - SEQ_API_LISTENURIS=http://0.0.0.0:5341
     ports:
       - "5341:5341"
     restart: always
