--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ services:
       dockerfile: Dockerfile
     restart: always
     environment:
-      - ASPNETCORE_URLS=http://+:80
       - ASPNETCORE_ENVIRONMENT=Production
       - ConnectionStrings__DefaultConnection=Host=db;Database=istasyon;Username=postgres;Password=postgres;TrustServerCertificate=True
       - AllowedOrigins__0=https://istasyon.tiginteknoloji.tr
@@ -14,7 +13,7 @@ services:
       db:
         condition: service_healthy
     healthcheck:
-      test: curl -f http://localhost/health || exit 1
+      test: curl -f http://localhost:8080/health || exit 1
       interval: 10s
       timeout: 5s
       retries: 3
