--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     depends_on:
       - backend
     healthcheck:
-      test: wget --no-verbose --tries=1 --spider http://localhost:80/ || exit 1
+      test: curl -f http://localhost/ || exit 1
       interval: 30s
       timeout: 5s
       retries: 3
