güvenlik gereklilikleri ve port kontrolleri arttırıldı

--- a/backend/IstasyonDemo.Api/Dockerfile
+++ b/backend/IstasyonDemo.Api/Dockerfile
@@ -1,7 +1,6 @@
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 8080
 
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
@@ -17,5 +16,12 @@ RUN dotnet publish "IstasyonDemo.Api.csproj" -c Release -o /app/publish /p:UseAp
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-RUN apt-get update && apt-get install -y curl
+# Curl kur, log klasörü oluştur ve yetkileri ayarla
+RUN apt-get update && \
+    apt-get install -y curl && \
+    mkdir -p Logs && \
+    chown -R app:app /app
+
+# Root olmayan kullanıcıya geç
+USER app
 ENTRYPOINT ["dotnet", "IstasyonDemo.Api.dll"]
