--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - AllowedOrigins__0=https://istasyon.tiginteknoloji.tr
       - AllowedOrigins__1=https://istasyonapi.tiginteknoloji.tr
       - JwtSettings__SecretKey=${JWT_SECRET}
+      - TZ=Europe/Istanbul
     depends_on:
       db:
         condition: service_healthy
@@ -25,6 +26,8 @@ services:
       context: .
       dockerfile: Dockerfile
     restart: always
+    environment:
+      - TZ=Europe/Istanbul
     depends_on:
       - backend
     healthcheck:
@@ -39,6 +42,7 @@ services:
       - POSTGRES_DB=${POSTGRES_DB:-istasyon}
       - POSTGRES_USER=${POSTGRES_USER:-postgres}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - TZ=Europe/Istanbul
     restart: always
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U postgres" ]
