adminer healthcheck eklendi

--- a/backend/IstasyonDemo.Api/appsettings.Development.json
+++ b/backend/IstasyonDemo.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=istasyon;Username=postgres;Password=xSRX|o9g6e!a4+w?;TrustServerCertificate=True"
   }
 }
