--- a/Istasyon.FileSync/Istasyon.FileSync.csproj
+++ b/Istasyon.FileSync/Istasyon.FileSync.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Resource Include="Assets\tigin.png" />
+  </ItemGroup>
+
 </Project>
