--- a/Istasyon.FileSync/Istasyon.FileSync.csproj
+++ b/Istasyon.FileSync/Istasyon.FileSync.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
