--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@angular/platform-browser": "^20",
         "@angular/platform-browser-dynamic": "^20",
         "@angular/router": "^20",
+        "@capacitor/android": "^8.0.0",
+        "@capacitor/ios": "^8.0.0",
         "@primeuix/themes": "^1.2.1",
         "@tailwindcss/postcss": "^4.1.11",
         "chart.js": "4.4.2",
@@ -34,6 +36,11 @@
         "@angular-devkit/build-angular": "^20",
         "@angular/cli": "^20",
         "@angular/compiler-cli": "^20",
+        "@capacitor/assets": "^3.0.5",
+        "@capacitor/cli": "^8.0.0",
+        "@capacitor/core": "^8.0.0",
+        "@capacitor/status-bar": "^8.0.0",
+        "@capgo/capacitor-native-biometric": "^8.0.3",
         "@types/jasmine": "~5.1.0",
         "autoprefixer": "^10.4.20",
         "eslint": "^9.30.1",
