feat: implement push notifications and rename app to TiShift (without secrets)

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-        <string>İstasyon Patron</string>
+	<string>Ti-Shift</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
