--- a/backend/IstasyonDemo.Api/appsettings.Development.json
+++ b/backend/IstasyonDemo.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=istasyon;Username=postgres;Password=xSRX|o9g6e!a4+w?;TrustServerCertificate=True"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=istasyon;Username=postgres;Password=postgres;TrustServerCertificate=True"
   }
 }
