--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,8 +1,31 @@
 services:
   db:
+    image: postgres:15-alpine
+    environment:
+      - POSTGRES_DB=istasyon
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - TZ=Europe/Istanbul
     ports:
       - "5432:5432"
+    restart: always
+    volumes:
+      - postgres_data_dev:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   adminer:
+    image: adminer
+    restart: always
     ports:
       - "8081:8080"
+    environment:
+      - ADMINER_DEFAULT_SERVER=db
+    depends_on:
+      - db
+
+volumes:
+  postgres_data_dev:
