--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sakai-ng",
+    "name": "tishift",
     "version": "20.0.0",
     "scripts": {
         "ng": "ng",
@@ -21,6 +21,7 @@
         "@angular/router": "^20",
         "@capacitor/android": "^8.0.0",
         "@capacitor/ios": "^8.0.0",
+        "@capacitor/push-notifications": "^8.0.0",
         "@primeuix/themes": "^1.2.1",
         "@tailwindcss/postcss": "^4.1.11",
         "chart.js": "4.4.2",
