fix: disable output hashing to prevent 404 errors on deployment

--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,7 @@
                                     "with": "src/environments/environment.prod.ts"
                                 }
                             ],
-                            "outputHashing": "all"
+                            "outputHashing": "none"
                         },
                         "development": {
                             "optimization": false,
