--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace = "tr.com.istasyon.patron"
+    namespace = "com.tiginteknoloji.tishift"
     compileSdk = rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "tr.com.istasyon.patron"
+        applicationId "com.tiginteknoloji.tishift"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
