--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,7 @@
                                     "with": "src/environments/environment.prod.ts"
                                 }
                             ],
-                            "outputHashing": "none"
+                            "outputHashing": "all"
                         },
                         "development": {
                             "optimization": false,
