--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,17 @@ services:
     depends_on:
       - backend
 
+  adminer:
+    image: adminer
+    restart: always
+    environment:
+      - ADMINER_DEFAULT_SERVER=fs4kwcgwcos48ssw0w48sssw
+      - ADMINER_DESIGN=pepa-linha
+    networks:
+      - coolify
+    ports:
+      - "8081:8080"
+
 networks:
   coolify:
     external: true
