--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,11 @@ services:
       - AllowedOrigins__1=https://istasyonapi.tiginteknoloji.tr
       - JwtSettings__SecretKey=${JWT_SECRET}
       - TZ=Europe/Istanbul
+    healthcheck:
+      test: curl -f http://localhost:8080/health || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 3
     networks:
       - coolify
     volumes:
@@ -25,6 +30,11 @@ services:
     restart: always
     environment:
       - TZ=Europe/Istanbul
+    healthcheck:
+      test: curl -f http://localhost/ || exit 1
+      interval: 30s
+      timeout: 5s
+      retries: 3
     networks:
       - coolify
     depends_on:
