--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     environment:
       - TZ=Europe/Istanbul
     healthcheck:
-      test: curl -f http://localhost/ || exit 1
+      test: wget --no-verbose --tries=1 --spider http://localhost/ || exit 1
       interval: 30s
       timeout: 5s
       retries: 3
@@ -50,6 +50,11 @@ services:
       - coolify
     ports:
       - "8082:8080"
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:8080 || exit 1
+      interval: 10s
+      timeout: 5s
+      retries: 3
 
 networks:
   coolify:
