--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,11 @@ services:
       - coolify
     depends_on:
       - backend
+    healthcheck:
+      test: curl -f http://localhost/ || exit 1
+      interval: 30s
+      timeout: 5s
+      retries: 3
 
   adminer:
     image: adminer
