--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser-dynamic": "^19.0.0",
         "@angular/router": "^19.0.0",
         "@capacitor/android": "^7.0.0",
+        "@capacitor/camera": "^7.0.3",
         "@capacitor/ios": "^7.0.0",
         "@capacitor/push-notifications": "^7.0.0",
         "@primeuix/themes": "^1.2.1",
