Fix: Firebase env var parsing and CSS build warnings

--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,7 @@
                             "src/assets"
                         ],
                         "styles": [
+                            "src/assets/tailwind.css",
                             "src/assets/styles.scss"
                         ],
                         "scripts": []
