--- a/backend/IstasyonDemo.Api/appsettings.json
+++ b/backend/IstasyonDemo.Api/appsettings.json
@@ -15,7 +15,7 @@
   },
   "GeminiSettings": {
     "ApiKey": "",
-    "ModelUrl": "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent"
+    "ModelId": "gemini-2.5-flash-lite"
   },
   "JwtSettings": {
     "SecretKey": "super_secret_key_change_this_in_production_12345_make_it_longer_for_security"
