--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@angular/platform-browser": "^19.0.0",
         "@angular/platform-browser-dynamic": "^19.0.0",
         "@angular/router": "^19.0.0",
+        "@capacitor-firebase/messaging": "^7.5.0",
         "@capacitor/android": "^7.0.0",
         "@capacitor/camera": "^7.0.3",
         "@capacitor/ios": "^7.0.0",
@@ -26,6 +27,7 @@
         "@primeuix/themes": "^1.2.1",
         "@tailwindcss/postcss": "^4.0.0",
         "chart.js": "4.4.2",
+        "firebase": "^11.10.0",
         "primeicons": "^7.0.0",
         "primeng": "^19.0.0",
         "rxjs": "~7.8.2",
