--- a/ios/App/App/GoogleService-Info.plist
+++ b/ios/App/App/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.tiginteknoloji.tishift</string>
+	<string>com.tiginteknoloji.tishiftapp</string>
 	<key>PROJECT_ID</key>
 	<string>ti-shift</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:887783679602:ios:412e87ea7749248fc504eb</string>
+	<string>1:887783679602:ios:367e8a7ea6bb0941c504eb</string>
 </dict>
 </plist>
