arşiv işlemleri öncesi yedek

--- a/backend/IstasyonDemo.Api/appsettings.json
+++ b/backend/IstasyonDemo.Api/appsettings.json
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=istasyon_db;Username=admin;Password=password123;Timeout=30;Command Timeout=60;Pooling=true;MinPoolSize=5;MaxPoolSize=100;Include Error Detail=true"
+    "DefaultConnection": "Host=127.0.0.1;Port=5432;Database=istasyon_db;Username=admin;Password=password123;Timeout=30;Command Timeout=60;Pooling=true;MinPoolSize=5;MaxPoolSize=100;Include Error Detail=true"
   },
   "GeminiSettings": {
     "ApiKey": "",
