--- a/backend/IstasyonDemo.Api/appsettings.Development.json
+++ b/backend/IstasyonDemo.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=istasyon;Username=postgres;Password=postgres;TrustServerCertificate=True"
+    "DefaultConnection": "Host=127.0.0.1;Port=5432;Database=istasyon;Username=postgres;Password=postgres;Include Error Detail=true"
   }
 }
