--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,13 +17,24 @@ services:
       timeout: 5s
       retries: 5
 
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - "8081:8080"
+  nocodb:
+    image: nocodb/nocodb
     environment:
-      - ADMINER_DEFAULT_SERVER=db
+      - SERVICE_URL_NOCODB_8080
+    volumes:
+      - 'nocodb-data:/usr/app/data/'
+    healthcheck:
+      test:
+        - CMD
+        - wget
+        - '-q'
+        - '--spider'
+        - 'http://127.0.0.1:8080/api/v1/health'
+      interval: 5s
+      timeout: 20s
+      retries: 10
+    ports:
+      - '8089:8080'
     depends_on:
       - db
 
