--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,27 +16,31 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - istasyon_network
+    container_name: istasyon-db
 
   nocodb:
-    image: nocodb/nocodb
+    image: nocodb/nocodb:latest
+    container_name: istasyon-nocodb
     environment:
-      - SERVICE_URL_NOCODB_8080
-    volumes:
-      - 'nocodb-data:/usr/app/data/'
-    healthcheck:
-      test:
-        - CMD
-        - wget
-        - '-q'
-        - '--spider'
-        - 'http://127.0.0.1:8080/api/v1/health'
-      interval: 5s
-      timeout: 20s
-      retries: 10
+      - NC_DB=pg://istasyon-db:5432?u=postgres&p=postgres&d=istasyon
     ports:
-      - '8089:8080'
+      - "8080:8080"
+    volumes:
+      - nocodb_data:/usr/app/data/
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    restart: always
+    networks:
+      - istasyon_network
 
 volumes:
   postgres_data_dev:
+  nocodb_data:
+
+
+networks:
+  istasyon_network:
+    driver: bridge
